# MMTrader

./: .gitignore  .prettierrc  README.md  eslint.config.js  nx.json  package.json  tailwind.config.ts  tsconfig.base.json
apps/py-runner/: README.md  project.json  pyproject.toml
apps/py-runner/src/: __init__.py  main.py  models.py
apps/py-runner/src/service/: backtest.py
apps/trader/: project.json  tsconfig.app.json
apps/web/: project.json  tsconfig.app.json  tsconfig.spec.json  vite.config.ts  vitest.config.ts
configs/: sample_spread_backtest.json  spread_backtest.schema.json
data/: README.md
data/ES/: glbx-mdp3-20240215.ohlcv-1s.csv  glbx-mdp3-20240216.ohlcv-1s.csv  glbx-mdp3-20240218.ohlcv-1s.csv  glbx-mdp3-20240219.ohlcv-1s.csv  glbx-mdp3-20240223.ohlcv-1s.csv  glbx-mdp3-20240225.ohlcv-1s.csv  glbx-mdp3-20240226.ohlcv-1s.csv  glbx-mdp3-20240227.ohlcv-1s.csv  glbx-mdp3-20240228.ohlcv-1s.csv  glbx-mdp3-20240303.ohlcv-1s.csv  glbx-mdp3-20240304.ohlcv-1s.csv  glbx-mdp3-20240310.ohlcv-1s.csv  glbx-mdp3-20240311.ohlcv-1s.csv  glbx-mdp3-20240312.ohlcv-1s.csv  glbx-mdp3-20240313.ohlcv-1s.csv  glbx-mdp3-20240314.ohlcv-1s.csv  glbx-mdp3-20240315.ohlcv-1s.csv  glbx-mdp3-20240317.ohlcv-1s.csv  glbx-mdp3-20240320.ohlcv-1s.csv  glbx-mdp3-20240321.ohlcv-1s.csv  glbx-mdp3-20240322.ohlcv-1s.csv  glbx-mdp3-20240324.ohlcv-1s.csv  glbx-mdp3-20240325.ohlcv-1s.csv  glbx-mdp3-20240326.ohlcv-1s.csv  glbx-mdp3-20240327.ohlcv-1s.csv  glbx-mdp3-20240328.ohlcv-1s.csv  glbx-mdp3-20240331.ohlcv-1s.csv  glbx-mdp3-20240401.ohlcv-1s.csv  (+165 more)
docs/: backtest-config.md  backtests-db.sql
(+350 files in other folders)
