[project]
name = "mmtrader-py-runner"
version = "0.1.0"
description = "Python compute service for MMTrader backtests"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "polars>=0.20.21",
  "pydantic>=2.7.0",
  "numpy>=1.26.4"
]

[project.optional-dependencies]
dev = ["ruff>=0.4.2", "pytest>=8.2.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8001
app = "apps.py-runner.src.main:app"

